fix: top-block z-index

--- a/src/components/TopBlock/top-block.module.sass
+++ b/src/components/TopBlock/top-block.module.sass
@@ -12,21 +12,24 @@
     height: 100%
     background-color: rgba(0, 0, 0, 0.6)
 
-  .content
-    width: 100%
-    display: flex
-    flex-direction: column
-    justify-content: space-around
-    align-items: flex-start
-    margin-bottom: 50px
+  .slider
+    z-index: 1
 
-    h1
-      color: white
-      font-weight: 700
-      font-family: "Merriweather", serif
-      font-size: 2.2rem
-      text-align: left
+    .content
+      width: 100%
+      display: flex
+      flex-direction: column
+      justify-content: space-around
+      align-items: flex-start
+      margin-bottom: 50px
 
-    .button
-      min-width: 200px
-      margin-top: 20px
+      h1
+        color: white
+        font-weight: 700
+        font-family: "Merriweather", serif
+        font-size: 2.2rem
+        text-align: left
+
+      .button
+        min-width: 200px
+        margin-top: 20px
